<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Verifyoo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start_from_url">StartFromUrl</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_error_page">ErrorPage</string>
    <string name="errCannotFetchInstructions">Cannot fetch instructions</string>
    <string name="title_activity_instruction">Instruction</string>
    <string name="btnSave">Save</string>
    <string name="btnClear">Clear</string>
    <string name="confirmGesture">Confirm</string>
    <string name="title_activity_instruction_input_selection">InstructionInputSelection</string>
    <string name="title_activity_saving_template">SavingTemplate</string>
    <string name="title_activity_template_created">TemplateCreated</string>
    <string name="title_activity_sign_in_input_selection">SignInInputSelection</string>
    <string name="title_activity_sign_in_draw">SignInDraw</string>
    <string name="title_activity_verify_template">VerifyTemplate</string>
    <string name="title_activity_auth_result">AuthResult</string>
    <string name="userAuthorized">User is authorized</string>
    <string name="userNotAuthorized">User is not authorized</string>
    <string name="pleaseWaitWhileVerifiyng">Please wait while verifying...</string>
    <string name="templateCreated">Template Created</string>
    <string name="title_activity_test">Test</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="updateUser">Update User</string>
    <string name="title_activity_template_updated">TemplateUpdated</string>
    <string name="templateUpdated">Template Updated</string>
    <string name="action_home">HOME</string>
    <string name="plsWaitWhileVerifying">Please wait while verifying...</string>
    <string name="repeatShape">Please repeat shape</string>
    <string name="home">Return Home</string>
    <string name="gcmDefaultSenderId">440648225192</string>
    <string name="goHome">Home</string>

</resources>
