<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:gravity="left|center_vertical"
        android:layout_gravity="center"
        android:width="270dp"
        />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:gravity="left|center_vertical"
        android:layout_gravity="center"
        android:width="270dp"
        />

    <Button
        android:id="@+id/btnUpdateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateUser"
        android:gravity="left|center_vertical"
        android:layout_gravity="center"
        android:width="270dp"
        />

</LinearLayout>
