<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black" >

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:id="@+id/txtInstruction"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@android:color/black"
        android:gravity="center_horizontal"
        android:textColor="@android:color/holo_blue_light"
        />

    <TextView
        android:text=""
        android:layout_gravity="center_horizontal"
        android:id="@+id/lblStatus"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@android:color/black"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.gesture.GestureOverlayView
        android:id="@+id/gestures_overlay"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="8"
        android:gestureColor="@android:color/holo_blue_dark"
        android:gestureStrokeType="multiple" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:id="@+id/btnSave"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:visibility="invisible" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmGesture"
            android:textColor="@android:color/white"
            android:enabled="false"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:id="@+id/btnConfirm" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnClear"
            android:textColor="@android:color/white"
            android:layout_toRightOf="@id/btnSave"
            android:id="@+id/btnClear" />

    </RelativeLayout>

</LinearLayout>